<resources>
    <string name="app_name">My Application</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="title">Weather</string>

    <string name="settings">Settings</string>
    <string name="city">City</string>
    <string name="selection_city">Input city name</string>

    <string name="button_confirm_selection">Confirm Selection</string>
    <string name="switch_show_temperature">Show temperature</string>
    <string name="switch_show_pressure">Show pressure</string>
    <string name="switch_show_humidity">Show humidity</string>

    <string name="player_play">PLAY</string>
    <string name="player_pause">PAUSE</string>
</resources>
